AM 26/10/05
- Fixed the RangeSimulator
- Removed some unused IOException (and catch blocks) in 
  example.hot.InetObserver.

MJ 25/10/05
- Reverted back to System.out for logging, and instead added a way
  of redirecting stdout to a custom PrintStream class, that can
  process the output (property "simulation.stdout" can define a PrintStream
  class for Simulator).

AM 24/10/05
- Re-implemented the RangeSimulator, now moved to its own package
  peersim.rangesim. Now, each experiment is run in a separate
  jvm, to avoid to break the contract that peersim parameters cannot
  be changed during the life of a JFM execution. 
- Added a mechanism to detect multiple bracket blocks referring to the
  same property (something you get when you comment a property definition
  without commenting the associated bracket block)
- Added a configurable logging support Peersim. Very simple for now,
  with two implementations: a DefaultLogger, that replicates the
  original behavior of Peersim; a RangeLogger, that replicates the
  behavior of the original RangeSimulator (by adding the value
  of range variables to the printed lines).
- Now, all reports use Log to print their data, with the execptions
  of GraphStats.

MJ 24/10/05
- Random seed is now explicitly set and printed to stderr before all
  experiments when using Simulator, also for simulation.experiments>1.
  (thanks to Simon Patarin for pointing me to this issue)
- Removed a forgotten debug println from DynamicNetwork.

SV 11/10/05
- Changed initial value of GeneralNode.counterID from 0 to -1, so that the
  prototype node gets ID -1, and the normal nodes get IDs 0, 1, 2, ...
  Note that the API does not constrain this sequence, and could change
  any time in the future.

AM 04/10/05
- Small changes in the documentation, to adapt to the new doclet.

MJ 03/10/05
- Cleanup of core package docs
- Addition of ID to Node interface (long requested feature)

MJ 02/10/05