@@ -19,6 +19,10 @@
 package peersim.rangesim;
 
 import java.io.*;
+import java.util.*;
+
+import peersim.config.*;
+import peersim.core.*;
 
 /**
  * This OutputStream uses an underlying stream to output
@@ -34,11 +38,59 @@ import java.io.*;
 public class TaggedOutputStream extends PrintStream
 {
 
+//--------------------------------------------------------------------------
+//Constants
+//--------------------------------------------------------------------------
 
 /** 
  * This character is appended at the end of each line. 
  */
-public static final int TAG = 1;
+protected static final int TAG = 1;
+
+//--------------------------------------------------------------------------
+//Parameters
+//--------------------------------------------------------------------------
+
+/**
+ * This parameter contains the string that should be printed on each 
+ * line, containing the values of the range parameters for the experiment
+ * which is being run. The full name of this configuration string is
+ * prefixed by {@value peersim.Simulator#PAR_REDIRECT}.
+ */
+protected static final String PAR_RANGES = "ranges";
+
+/**
+ * This parameter contains the list of observers for which the string
+ * contained in parameter {@value #PAR_RANGES} should be augmented with 
+ * a "TIME <t>" specification regarding current time. Observers are 
+ * separated by one of this characters: ' ' - ',' - ';'.
+ */
+protected static final String PAR_TIME = "simulation.logtime";
+
+
+//--------------------------------------------------------------------------
+//Fields
+//--------------------------------------------------------------------------
+
+/** Variable used to save the original System.out to simplify printing */
+private PrintStream stdout;
+
+/** Buffer used to store a single line; it can grow */
+private byte[] buffer = new byte[1024];
+
+/** Current size of the buffer */
+private int size;
+
+/** The value of the PAR_RANGES parameter */
+private final String ranges;
+
+/** The value of the PAR_TIME parameter */
+private final ArrayList<String> obstime;
+
+//--------------------------------------------------------------------------
+//Initialization
+//--------------------------------------------------------------------------
+
 
 /**
  * Creates a tagged output stream that prints the tagged
@@ -47,25 +99,39 @@ public static final int TAG = 1;
 public TaggedOutputStream(String prefix)
 {
 	super(System.out);
+	
+	obstime = new ArrayList<String>();
+	String[] obs = Configuration.getString(PAR_TIME, "").split(" :,");
+	for (int i=0; i < obs.length; i++) {
+		obstime.add("control." + obs[i]);
+	}
+	ranges = Configuration.getString(prefix + "." + PAR_RANGES, "");
+	stdout = System.out;
+	size = 0;
 }
 
+//--------------------------------------------------------------------------
+//Methods
+//--------------------------------------------------------------------------
 
 // Comment inherited from interface
 @Override
 public synchronized void write(byte[] b, int off, int len)
 {
+	if (size+len > buffer.length) {
+		byte[] tmp = new byte[Math.max(buffer.length*2, size+len)];
+		System.arraycopy(buffer, 0, tmp, 0, size);
+		buffer = tmp;
+	}
 	int last = off+len;
-	try {
-		for (int i=off; i < last; i++) {
-			if (b[i] == '\n')
-				out.write(TAG);
-			out.write(b[i]);
+	for (int i=off; i < last; i++) {
+		if (b[i] == '\n') {
+			buffer[size++] = TAG;
+			buffer[size++] = b[i];
+			printLine();
+		}  else {
+			buffer[size++] = b[i];
 		}
-	} catch (IOException e) {
-		// Should never be thrown, because the underlying stream is
-		// a PrintStream; anyway, to be sure, we set the error flag
-		// in this stream.
-		setError();
 	}
 }
 
@@ -73,16 +139,39 @@ public synchronized void write(byte[] b, int off, int len)
 @Override
 public synchronized void write(int b)
 {
-	try {
-		if (b == '\n')
-			out.write(TAG);
-	  out.write(b);
-	} catch (IOException e) {
-		// Should never be thrown, because the underlying stream is
-		// a PrintStream; anyway, to be sure, we set the error flag
-		// in this stream.
-		setError();
+	if (size == buffer.length) {
+		byte[] tmp = new byte[buffer.length*2];
+		System.arraycopy(buffer, 0, tmp, 0, size);
+		buffer = tmp;
 	}
+	if (b == '\n') {
+		buffer[size++] = TAG;
+		buffer[size++] = (byte) b;
+		printLine();
+	}  else {
+		buffer[size++] = (byte) b;
+	}
+}
+
+/** 
+ * Actually prints a line, inserting ranges and time
+ * when needed.
+ */
+private void printLine()
+{
+	String line = new String(buffer, 0, size);
+	String[] parts = line.split(":");
+	if (parts.length == 2) {
+		stdout.print(parts[0]);
+		stdout.print(": ");
+		stdout.print(ranges);
+		if (obstime.contains(parts[0]))
+			stdout.print(" TIME " + CommonState.getTime() + " ");
+		stdout.print(parts[1]);
+	} else {
+		stdout.print(line);
+	}
+	size = 0;
 }
 
 }
