@@ -1,3 +1,8 @@
+AM 28/10/05
+- Slightly changed the structure of RangeSimulator, to offer a
+  feature (printing of time) that I was using in the previous
+  version and I haven't re-implemented yet. 
+
 AM 26/10/05
 - Fixed the RangeSimulator
 - Removed some unused IOException (and catch blocks) in 
